--- a/css/listing.css
+++ b/css/listing.css
@@ -167,10 +167,29 @@
   padding: 2px 8px;
   border-radius: 3px;
   text-align: right;
+  margin-left: 10px; /* Add margin to the left */
 }
 
 /* Responsive adjustments */
+@media (max-width: 1210px) {
+  html, body {
+    overflow-x: hidden; /* Ensure no horizontal scrolling on the entire page */
+  }
+}
+
+
+/* Responsive adjustments */
 @media (max-width: 768px) {
+  .category-buttons {
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+
+  .category-buttons button {
+    flex: 0 0 calc(33.33% - 10px);
+    margin: 0;
+  }
+
   .item-grid {
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   }
@@ -180,6 +199,63 @@
   }
 }
 
+@media (max-width: 610px) {
+  html, body {
+    overflow-x: hidden; /* Ensure no horizontal scrolling on the entire page */
+  }
+
+  .search-container {
+    overflow-x: hidden; /* Hide horizontal scrolling */
+    overflow-y: auto; /* Allow vertical scrolling if needed */
+  }
+
+  .search-bar {
+    flex-direction: column;
+    align-items: stretch; /* Stretch items */
+    justify-content: center; /* Center justify items */
+    margin-left: auto;
+    margin-right: auto;
+    overflow-x: hidden; /* Hide horizontal scrolling */
+    width: 100%; /* Ensure it doesn't exceed the viewport width */
+  }
+
+  .search-bar input[type="text"] {
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%; /* Full width for input */
+    text-align: center; /* Center text */
+    overflow-x: hidden; /* Hide horizontal scrolling */
+  }
+
+  .search-text {
+    position: static;
+    transform: none;
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .filters-btn {
+    display: none;
+    position: static;
+    margin-top: 10px;
+    width: 100%; /* Full width for button */
+  }
+
+  .category-buttons {
+    margin-left: -35px;
+    margin-right: auto;
+    flex-wrap: wrap;
+    justify-content: center; /* Center buttons */
+    gap: 10px; /* Add spacing between buttons */
+    overflow-x: hidden; /* Hide horizontal scrolling */
+    width: 100%; /* Ensure it doesn't exceed the viewport width */
+  }
+
+  .category-buttons button {
+    flex: 0 0 calc(50% - 5px); /* Adjust button size for two per row */
+    margin: 0;
+  }
+}
 .dropbtn {
   color: white;
   font-size: 16px;
